tests/samples/valid/size_of_struct.pn
word64 Position
{
	x: i32,
	y: i32,
}

struct Foo
{
	a: u8,
	x: i32,
}

struct Bar
{
	x: i128,
	foo: Foo,
	pos: Position,
}

struct Baz
{
	a: u8,
	x: i128,
	foo: Foo,
}

const SIZE_OF_BAZ: usize = |:Baz|;

word32 Padded
{
	a: u8,
	b: u16,
}

word16 Bools
{
	a: bool,
	b: bool,
}

const TOTAL: usize = |:Position| + |:Foo| + |:Bar| + |:Baz| + |:Padded| + |:Bools|;

const EXPECTED: usize =    2 * 4 +  2 * 4 +  4 * 8 +  4 * 8 +     2 * 2 +    2 * 1;

fn main() -> usize
{
	return: 168 + SIZE_OF_BAZ + TOTAL - EXPECTED
}
