tests/samples/invalid/missing_member.pn
word16 Bar
{
	a: u8,
	b: u8,
}

fn foo(x: Bar) -> u8
{
	return: x.a + x.c
}
